# ntt-graphics-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.json  config.py  profiles.json  pyproject.toml
assets/html/: engine.html
cmakes/: ntt-configure.cmake  ntt-glfwConfig.cmake
inc/engine/: engine.h
inc/engine/application/: application.h
inc/engine/core/: color.h  color.inl  common.h  console.h  core.h  defs.h  id.h  object.h  object_type.h  object_type.inl  result.h  result.inl  result_type.h  types.h  virtual_table.h
inc/engine/core/containers/: array.h  containers.h  list.h  map.h  mat.h  queue.h  stack.h  storage.h  string.h  vec.h  (+1 more)
inc/engine/drivers/: drivers.h
inc/engine/resources/: resource.h  resource_type.h  resource_type.inl  resources.h
inc/engine/systems/: component.h  entity.h  system.h  systems.h
src/: main.c  main_editor.c  main_engine.c
src/application/: application.c
src/core/: color.c  console.c  id.c  object.c  object_type.c  result.c  virtual_table.c
src/core/containers/: array.c  list.c  map.c  mat.c  queue.c  stack.c  storage.c  string.c  string_view.c  vec.c
src/core/logging/: logging.c  logging_message.c  logging_type.c
src/core/memory/: alloc.c  malloc.c  memory.c
src/core/utils/: backtrace.c  console.c  debug_info.c  file.c  time.c
src/drivers/: drivers.c
src/drivers/glfw_driver/: glfw_driver.c
src/resources/: resource.c  resource_type.c  resources.c
src/resources/window/: window_resource.c
src/systems/: component.c  entity.c  system.c  systems.c
src/systems/display/: display.c  display_component.c  display_driver.c  display_driver_type.c  display_system.c
src/systems/rendering/: rendering_system.c
unittests/: main_unittest.c
unittests/core_unittests/: core_unittests.h  id_tests.h  logging_unittest.h  memory_tests.h  object_tests.h
unittests/core_unittests/containers/: array_tests.h  containers_tests.h  list_tests.h  map_tests.h  mat_tests.h  queue_tests.h  stack_tests.h  storage_tests.h  string_tests.h  string_view_tests.h  vec_tests.h
unittests/tools/: tools.h
(+25 files in other folders)
